fix: prevent scrollbars from appearing in video containers by setting overflow to hidden

--- a/ikarodjango/static/css/base.css
+++ b/ikarodjango/static/css/base.css
@@ -205,6 +205,7 @@ body {
     background: transparent;
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
 .pip-container {
@@ -214,7 +215,7 @@ body {
     height: 24vh;
     right: 0;
     border-radius: 10px;
-    overflow: auto;
+    overflow: hidden;
     margin: 20px;
 }
 
@@ -231,7 +232,7 @@ body {
     right: 0;
     width: 60px;
     height: 60px;
-    overflow: auto;
+    overflow: hidden;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 50px;
 }
